--- a/layout.css
+++ b/layout.css
@@ -4,6 +4,34 @@
 
 }
 
-html {
+body {
+    display: grid;
+    grid-template-columns:repeat(10, 1fr);
+    grid-gap: 5px;
+    grid-auto-rows: minmax(10px, auto);
+}
+
+header {
+    grid-column: 2 / 9;
+    grid-row: 1 / 3;
     
+}
+
+nav {
+    grid-column: 2 / 9;
+    grid-row: 3 ;
+
+}
+
+main {
+    grid-column: 2 / 10;
+    /*no pone grid-row*/
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    grid-gap: 10px;
+    grid-auto-rows: minmax(10px, auto);
+}
+
+footer {
+    grid-column: 5 ;
 }
