--- a/layout.css
+++ b/layout.css
@@ -5,33 +5,35 @@
 }
 
 body {
+    
     display: grid;
     grid-template-columns:repeat(10, 1fr);
-    grid-gap: 5px;
+    grid-gap: 20vh;
     grid-auto-rows: minmax(10px, auto);
-}
-
-header {
-    grid-column: 2 / 9;
-    grid-row: 1 / 3;
     
 }
 
-nav {
+header {
+    position:fixed;
+    width: 80%;
+    margin: 2vh auto;
+    /*
     grid-column: 2 / 9;
-    grid-row: 3 ;
-
+    grid-row: 1 / 3;
+    */
 }
+
 
 main {
     grid-column: 2 / 10;
-    /*no pone grid-row*/
+    grid-row: 2 ;
     display: grid;
     grid-template-columns: repeat(10, 1fr);
-    grid-gap: 10px;
+    grid-gap: 10vh;
     grid-auto-rows: minmax(10px, auto);
 }
 
 footer {
-    grid-column: 5 ;
+    grid-column: 5 /7;
+    grid-row: 3 ;
 }
