--- a/layout.css
+++ b/layout.css
@@ -17,22 +17,23 @@ header {
     position:fixed;
     width: 100%;
     margin: 2vh auto;
-    /*
-    grid-column: 2 / 9;
-    grid-row: 1 / 3;
-    */
+    
 }
 
 nav {
     position:fixed;
     width: 70%;
-    margin: 5% 25%;
+    margin: 5% 10%;
+    padding: 5%;
+    background-color: antiquewhite;
     
 }
 
 nav ul li {
     display: inline-block;
     width: 15%;
+    margin: 5px 1vw;
+    text-align: center;
 }
 
 ul {
@@ -49,7 +50,7 @@ a:hover {
 }
 
 a:visited {
-    color: black;
+    color: goldenrod;
 }
 
 main {
