añadir texto en la página sobre nosotro y añadir un párrafo en la de registro

--- a/layout.css
+++ b/layout.css
@@ -5,11 +5,11 @@
 }
 
 body {
-    
     display: grid;
     grid-template-columns:repeat(10, 1fr);
     grid-gap: 20vh;
     grid-auto-rows: minmax(10px, auto);
+    text-align: justify;
     
 }
 
