--- a/paginaNosotros/paginaNosotros.css
+++ b/paginaNosotros/paginaNosotros.css
@@ -1,1 +1,36 @@
- 
+section#entrada {
+    grid-column: 3 / 9;
+    grid-row: 1;
+    text-align: justify;
+}
+
+section#miembro {
+    grid-column: 3 / 9;
+    grid-row: 2;
+} 
+
+#miembro {
+    display: grid;
+    grid-template-columns:repeat(3,1fr);
+    grid-gap: 5vh;
+    grid-auto-rows: minmax(10px, auto);
+}
+
+#fundadora {
+    grid-column: 2;
+    grid-row: 1;
+}
+
+#director {
+    grid-column: 1;
+    grid-row: 1;
+}
+
+#coordinadora {
+    grid-column: 3;
+    grid-row: 1;
+}
+
+article p {
+    margin-bottom: 5vh;
+}
