--- a/layout.css
+++ b/layout.css
@@ -5,24 +5,60 @@
 }
 
 body {
-    
     display: grid;
     grid-template-columns:repeat(10, 1fr);
     grid-gap: 20vh;
     grid-auto-rows: minmax(10px, auto);
-    
+    text-align: justify;
+    background-color: #EFEFEF;
 }
 
 header {
     position:fixed;
-    width: 80%;
-    margin: 2vh auto;
-    /*
-    grid-column: 2 / 9;
-    grid-row: 1 / 3;
-    */
+    width: 100%;    
 }
 
+header div {
+    background-color: #EFEFEF;
+}
+
+nav {
+
+    width: 70%;
+    margin: 0px 10% 5% 10%;
+    padding: 4.5%;
+    background-color: #c9d6ee;
+    text-shadow: 1px 5px 5px gray;
+    font-size: larger;
+    font-weight: bolder;
+    border-radius: 8px;
+    
+}
+
+nav ul li {
+    display: inline-block;
+    width: 15%;
+    margin: 5px 1vw;
+    text-align: center;
+    color: #26467e;
+}
+
+ul {
+    list-style: none;  
+}
+
+a {
+    text-decoration: none;
+}
+
+a:hover {
+    color: #3e70b9;
+    background-color:#e7ecf7;
+}
+
+a:visited {
+    color: #26467e;
+}
 
 main {
     grid-column: 2 / 10;
@@ -31,9 +67,13 @@ main {
     grid-template-columns: repeat(10, 1fr);
     grid-gap: 10vh;
     grid-auto-rows: minmax(10px, auto);
+    margin-top: 15%;
 }
 
 footer {
     grid-column: 5 /7;
     grid-row: 3 ;
 }
+
+
+
