--- a/paginaRegistro/paginaRegistro.css
+++ b/paginaRegistro/paginaRegistro.css
@@ -1,1 +1,20 @@
- 
+section#entrante {
+    grid-column: 3 / 9;
+    grid-row: 1;
+    text-align: justify;
+}
+
+section#formulario {
+    grid-column: 3 / 6;
+    grid-row: 2;
+}
+
+
+label {
+    display: inline-block;
+    width: 10vw;
+}
+
+label, input {
+    margin-bottom: 5px;
+}
