--- a/paginaRegistro/paginaRegistro.css
+++ b/paginaRegistro/paginaRegistro.css
@@ -5,16 +5,38 @@ section#entrante {
 }
 
 section#formulario {
-    grid-column: 3 / 6;
+    grid-column: 4 / 8;
     grid-row: 2;
+    box-shadow: 2px 2px 18px 12px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    margin-left: 10%;
+    border-radius: 5px;
+
 }
 
+#datoBasico label {
+    display: block;
+}
 
-label {
-    display: inline-block;
-    width: 10vw;
+#datoBasico input {
+    background-color: #EFEFEF;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom-style: solid;
+    border-color: #26467e;
+    border-width: 1px;
+
 }
 
 label, input {
-    margin-bottom: 5px;
+    margin-bottom: 8px;
 }
+
+#boton {
+    margin-left: 8vw;
+}
+
+
+
+
