conflictos entre el css, html, js de la página registro

--- a/paginaRegistro/paginaRegistro.css
+++ b/paginaRegistro/paginaRegistro.css
@@ -33,6 +33,15 @@ label, input {
     margin-bottom: 8px;
 }
 
+#dato {
+    width: 30vw;
+    height: 30vh;
+    background-color: beige;
+    display: none;
+    position: fixed;
+}
+
+
 #boton {
     margin-left: 8vw;
 }
