--- a/paginaContacto/paginaContacto.css
+++ b/paginaContacto/paginaContacto.css
@@ -1,28 +1,47 @@
 #entrada {
     grid-column: 3 / 9;
     grid-row: 1;
+}
 
-
+#fotos {
+    grid-column: 3 / 9;
+    grid-row: 2;
+    margin-bottom: 15vh;
+    
 }
 
 #localizacion {
     grid-column: 3 / 9;
-    grid-row: 2;
+    grid-row: 3;
+}
+
+#localizacion p {
+    display: inline-block;
+    width: 30%;
+    margin-top: 30vh;
+}
+
+#galeria {
+    margin-left: 5vw;
+}
+
+#medio {
+    margin: 0px 30px;
 }
 
 #contacto {
     grid-column: 3 / 7;
-    grid-row: 3;
+    grid-row: 4;
 }
 
 #final{
     grid-column: 3 / 9;
-    grid-row: 4;
+    grid-row: 5;
 }
 
 #slogan {
     grid-column: 4 / 9;
-    grid-row: 5;
+    grid-row: 6;
 }
 
 article {
@@ -36,7 +55,7 @@ article p {
 
 #formulario {
     grid-column: 7 /10;
-    grid-row: 3;
+    grid-row: 4;
 }
 
 input {
@@ -49,3 +68,28 @@ input {
     border-width: 1px;
 
 }
+
+.fotoCentro {
+    margin: 10px;
+    width: 500px;
+    position: absolute;
+    z-index: -5;
+}
+
+/*
+#galeria {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+
+
+.fotoCentro:hover img {
+    transform: scale(1.1);
+}
+
+.fotoCentro img {
+    width: 100%;
+    transition: transform 0.3s ease-in-out;
+}
+*/
