poner fotos en la section de contenido

--- a/index.css
+++ b/index.css
@@ -37,3 +37,14 @@ td {
     border-style: dotted;
     
 }
+
+article img {
+    width: 250px;
+    height: 200px;
+    padding: 10px;
+}
+
+article img:hover {
+    transform: scale(1.1);
+    
+}
