--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@
 
 #introduccion p {
     width: 60%;
-    margin: 2vw 10vw 5vw 10vw;
+    margin: 1vw 10vw;
 }
 
 #contenido {
@@ -48,3 +48,16 @@ article img:hover {
     transform: scale(1.1);
     
 }
+
+#primeraImg {
+    width: 900px;
+}
+
+h1 {
+    text-align: center;
+}
+
+#segundoImg {
+    margin-left: 11vw;
+}
+
