Nuevos avances en la página index (#6)
* activar y desactivar opciones de los dias de semana con js

* la molestia de la altura de header

* diseño del formulario

* diseño y contenido de la página contacto

* cambiar el formato de las fotos de logo

* cambiar el formato de las fotos de logo

* cambiar el formato de las fotos de logo

* cambiar el texto alternativo de las fotos

* contenido de la pagina actividad

* poner fotos en la section de contenido

* añdir foto en la section introduccion

* cambiar tamaño de las imagenes

---------

Co-authored-by: xuetingDemo <501834377@qq.com>

--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@
 
 #introduccion p {
     width: 60%;
-    margin: 2vw 10vw 5vw 10vw;
+    margin: 1vw 10vw;
 }
 
 #contenido {
@@ -37,3 +37,27 @@ td {
     border-style: dotted;
     
 }
+
+article img {
+    width: 12vw;
+    height: 10vw;
+    padding: 10px;
+}
+
+article img:hover {
+    transform: scale(1.1);
+    
+}
+
+#primeraImg {
+    width: 48vw;
+}
+
+h1 {
+    text-align: center;
+}
+
+#segundoImg {
+    margin-left: 8vw;
+}
+
