Ultimo avance del trabajo (#8)
* conflictos entre el css, html, js de la página registro

* añadir fotos a la página contacto y añadir textos en la página resgitro

* efecto de cambiar foto

* version preterminada de página contacto

* terminar las funciones de js sobre el formulario

* borrar algun estilo de la galeria de foto innecesario

* terminar la página Nosotros y añadir box-shadow a los li de la página Registro

* añadir la funcion de incrementarLike

* terminar la página actividad

--- a/paginaRegistro/paginaRegistro.css
+++ b/paginaRegistro/paginaRegistro.css
@@ -6,11 +6,17 @@ section#entrante {
 
 section#formulario {
     grid-column: 7 / 10;
+    grid-column: 7 / 10;
     grid-row: 2;
     box-shadow: 2px 2px 18px 12px rgba(0, 0, 0, 0.2);
     padding: 20px;
     border-radius: 5px;
 
+}
+
+section#ventajas {
+    grid-column: 3 / 7;
+    grid-row: 2;
 }
 
 section#ventajas {
@@ -46,6 +52,15 @@ label, input {
 }
 
 
+#dato {
+    width: 30vw;
+    height: 30vh;
+    background-color: beige;
+    display: none;
+    position: fixed;
+}
+
+
 #boton {
     margin-left: 8vw;
 }
@@ -54,6 +69,9 @@ p {
     margin: 5%;
 }
 
+#contact {
+    font-size:32px;    
+}
 
 
 
